# graphics-lab

./: .symlink-info  .travis.yml  Cargo.toml  Makefile  README.md
examples/: border_app.rs  calc_buffers.rs  empty_app.rs  line.rs  line_app.rs  rect_texture_app.rs  texture_test_app.rs  triangulation_app.rs
src/: conversion.rs  convertion.rs  empty_app.rs  lib.rs  line_app.rs  main.rs  mouse_app.rs  snipcode_triangulation.rs  snipcode_triangulation_app.rs  test_colors.rs  test_polygons.rs  texture_test_app.rs  triangulation.rs  triangulation_app.rs  units.rs  vector2d.rs
