[package]

name = "rust-graphics-lab"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
tags = []

[[lib]]

name = "rust-graphics-lab"
path = "src/lib.rs"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston/"

[dependencies.graphics]

git = "https://github.com/pistondevelopers/rust-graphics"

[dependencies.sdl2_game_window]

git = "https://github.com/pistondevelopers/sdl2_game_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

