[package]

name = "rust-graphics-lab"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
tags = []

[lib]

name = "rust-graphics-lab"
path = "src/lib.rs"

[dependencies.graphics]

git = "https://github.com/pistondevelopers/graphics"

[dependencies.sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

[dev-dependencies.event]

git = "https://github.com/pistondevelopers/event"

